--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -1,17 +1,19 @@
+@import '../../variables';
+
 .home_ctr {
-    display: flex;
-    flex-direction: row;
-    padding: 1rem;
-    gap: 1rem;
-    justify-content: center;
-    align-items: center;
-    padding: 2rem;
+  display: flex;
+  flex-direction: row;
+  padding: 1rem;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
 }
 
 .home_main_content {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .home_avatar {
@@ -20,7 +22,7 @@
       rgb(0, 255, 164),
       rgb(166, 104, 255)
     ) repeat scroll 0% 0%;
-    border-radius: 50%;
+  border-radius: 50%;
   height: 40vh;
   width: 40vh;
 }
@@ -31,8 +33,44 @@
   gap: 0.5rem;
 }
 
+.hello_typewriter {
+  font-family: $primary-font;
+  overflow: hidden;
+  border-right: 0.15em solid orange;
+  white-space: nowrap;
+  animation: typing 3.5s steps(30, end), blink-caret 1s step-end infinite;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: orange;
+  }
+}
+
 .home_list {
+  font-family: $primary-font;
   padding: 0.5em;
+}
+
+.home_role {
+  font-family: $primary-font;
+}
+
+.home_short {
+  font-family: $primary-font;
 }
 
 .home_btn_ctr {
@@ -43,6 +81,7 @@
 
 .portfolio_btn,
 .contact_btn {
+  font-family: $primary-font;
   background-color: black;
   border: solid 1px black;
   border-radius: 0.25em;
@@ -63,5 +102,5 @@
 }
 
 .social_el {
-    cursor: pointer;
+  cursor: pointer;
 }
