--- a/src/index.scss
+++ b/src/index.scss
@@ -4,12 +4,14 @@
 }
 
 body {
+  background-color: #0a192f;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  line-height: 1.5;
 }
 
 code {
@@ -17,23 +19,23 @@ code {
     monospace;
 }
 
-h1,
-h2,
-p,
-ul {
-  margin: 0;
-}
-
 h1 {
   font-size: 30px;
+  color: #a8b2d1;
 }
 
 h2 {
   font-size: 18px;
+  color: #a8b2d1;
+}
+
+h3 {
+  color: #a8b2d1;
 }
 
 p {
   font-size: 16px;
+  color: #8892b0;
 }
 
 a {
