--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -1,21 +1,43 @@
 @import "../../variables";
 
-.about_section {
-  display: flex;
-  align-items: center;
-  gap: 10rem;
-}
-
 .about_ctr {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  padding: 4rem;
+  opacity: 0;
+  transform: translateX(100%);
+  animation: appearAbout 1s forwards;
 }
 
-.about_title {
-  font-family: $primary-font;
+@keyframes appearAbout {
+  from {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 .about_content {
+  display: flex;
+  flex-direction: column;
   font-family: $primary-font;
+}
+
+.about_title {
+  font-size: 50px;
+}
+
+.about_txt {
+  font-size: 25px;
+}
+
+.skills_intro {
+  color: #8892b0;
+  font-size: 25px;
 }
