--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -31,9 +31,16 @@
 
 .about_title {
   font-size: 50px;
+  color: #a8b2d1;
+}
+
+.about_title_light {
+  font-size: 50px;
+  color: #0a192f;
 }
 
 .about_txt {
+  color: #8892b0;
   font-size: 25px;
 }
 
