--- a/src/index.scss
+++ b/src/index.scss
@@ -3,8 +3,11 @@
   src: url("./assets/fonts/Montserrat-VariableFont_wght.ttf") format("truetype");
 }
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  background-color: #0a192f;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
