--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,6 @@
   align-items: center;
   justify-content: center;
   min-height: calc(-80px + 100vh);
-  padding: 0 10rem;
+  padding: 0 1rem 0 8rem;
 }
 
