--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -12,24 +12,7 @@
   display: flex;
   flex-direction: column;
   font-family: $primary-font;
+  gap: 2rem
 }
 
-.about_title {
-  font-size: 50px;
-  color: #a8b2d1;
-}
 
-.about_title_light {
-  font-size: 50px;
-  color: #0a192f;
-}
-
-.about_txt {
-  color: #8892b0;
-  font-size: 25px;
-}
-
-.skills_intro {
-  color: #8892b0;
-  font-size: 25px;
-}
