--- a/src/App.scss
+++ b/src/App.scss
@@ -5,10 +5,13 @@
 }
 
 .main-content {
+  min-height: calc(-80px + 100vh);
+  padding: 5rem 1rem 0 8rem;
+}
+
+.nav_section {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: calc(-80px + 100vh);
-  padding: 0 1rem 0 8rem;
+  height: 100vh;
 }
-
