--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@
 
 .nav_section {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
