--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -1,53 +1,68 @@
-@import "../../variables";
+@media only screen and (min-width: 821px), (max-width: 1089px) {
+  .home_ctr {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+    padding-top: 4rem;
+  }
 
-.home_ctr {
-  display: flex;
-  padding: 1rem;
-  gap: 1rem;
-  justify-content: center;
-  align-items: center;
-}
+  .home_desc_content {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
 
-.home_main_content {
-  display: flex;
-  flex-direction: column;
-  gap: 4rem;
-}
+  .home_btn_ctr {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+  }
 
-.home_desc_content {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-}
+  .welcome_title {
+    width: 8ch;
+    font-family: monospace;
+    font-size: 1em;
+    animation: typing 1.25s steps(8), blink 0.5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid;
+  }
 
-.home_btn_ctr {
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
-}
+  .welcome_text {
+    font-size: 2rem;
+  }
 
-.welcome_text {
-  width: 8ch;
-  font-family: monospace;
-  font-size: 1em;
-  animation: typing 1.25s steps(8), blink 0.5s step-end infinite alternate;
-  white-space: nowrap;
-  overflow: hidden;
-  border-right: 3px solid;
-}
+  .highlight {
+    font-weight: bold;
+  }
 
-.highlight {
-  font-weight: bold;
-}
+  @keyframes typing {
+    from {
+      width: 0;
+    }
+  }
 
-@keyframes typing {
-  from {
-    width: 0;
+  @keyframes blink {
+    50% {
+      border-color: transparent;
+    }
   }
 }
 
-@keyframes blink {
-  50% {
-    border-color: transparent;
+/* medium */
+@media only screen and (min-width: 550px), (max-width: 820px) {
+}
+
+/* small */
+@media only screen and (max-width: 549px) {
+  .home_btn_ctr {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .welcome_text {
+    font-size: 1.5rem;
   }
 }
