--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -3,14 +3,18 @@
     display: flex;
     flex-direction: column;
     padding-top: 4rem;
+    gap: 2rem;
   }
   .about_title {
     font-size: 2rem;
     padding-bottom: 2rem;
   }
-
   .about_text {
     font-size: 1.5rem;
+  }
+  .about_item {
+    display: flex;
+    flex-direction: column;
   }
 }
 
