--- a/src/components/card/CardTransition.scss
+++ b/src/components/card/CardTransition.scss
@@ -1,6 +1,5 @@
-.wrapper {
+.wrapper_card {
   width: 100%;
-  height: 100%;
   padding: 1rem 0;
   display: flex;
   align-items: center;
@@ -20,7 +19,7 @@
 
 .item {
   width: 100%;
-  height: 100%;
+  
   border-radius: 5px;
   will-change: transform, opacity;
 }
