Implement some new functionnalities

--- a/src/components/card/CardTransition.scss
+++ b/src/components/card/CardTransition.scss
@@ -5,7 +5,7 @@
   align-items: center;
 }
 
-.container {
+.container_card {
   position: relative;
   display: grid;
   grid-template-columns: repeat(3, minmax(10rem, 1fr));
@@ -19,7 +19,6 @@
 
 .item {
   width: 100%;
-  
   border-radius: 5px;
   will-change: transform, opacity;
 }
