--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -12,6 +12,22 @@
     gap: 0.5rem;
   }
 
+  .wrapper_img {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .image_home_ctr {
+    width: 20vh;
+    border-radius: 50%;
+  }
+
+  .image_home {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 50%;
+  }
+
   .home_btn_ctr {
     display: flex;
     justify-content: center;
@@ -25,7 +41,6 @@
     animation: typing 1.25s steps(8), blink 0.5s step-end infinite alternate;
     white-space: nowrap;
     overflow: hidden;
-    border-right: 3px solid;
   }
 
   .welcome_text {
@@ -49,12 +64,17 @@
   }
 }
 
-/* medium */
-@media only screen and (min-width: 550px), (max-width: 820px) {
-}
-
 /* small */
 @media only screen and (max-width: 549px) {
+  .home_ctr {
+    gap: 1rem;
+  }
+
+  .wrapper_img {
+    display: flex;
+    justify-content: center;
+  }
+
   .home_btn_ctr {
     display: flex;
     align-items: center;
