--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -4,11 +4,13 @@
     flex-direction: column;
     gap: 4rem;
     padding-top: 4rem;
+    width: 100%;
   }
 
   .home_desc_content {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     gap: 0.5rem;
   }
 
@@ -34,23 +36,6 @@
     gap: 2rem;
   }
 
-  .welcome_title {
-    width: 8ch;
-    font-family: monospace;
-    font-size: 1em;
-    animation: typing 1.25s steps(8), blink 0.5s step-end infinite alternate;
-    white-space: nowrap;
-    overflow: hidden;
-  }
-
-  .welcome_text {
-    font-size: 2rem;
-  }
-
-  .highlight {
-    font-weight: bold;
-  }
-
   @keyframes typing {
     from {
       width: 0;
@@ -60,6 +45,50 @@
   @keyframes blink {
     50% {
       border-color: transparent;
+    }
+  }
+
+  .wrapper_home {
+    .item_home {
+      visibility: hidden;
+      display: none;
+    }
+
+    > div {
+      font-family: monospace;
+      font-size: 4em;
+      min-height: 5rem;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      display: flex;
+      align-items: flex-end;
+      font-weight: bold;
+      color: #3fbf04;
+
+      &:after {
+        content: "";
+        width: 10px;
+        height: 4px;
+        display: block;
+        background: white;
+        color: #3fbf04;
+        margin-bottom: 4px;
+        margin-left: 2px;
+        animation-duration: 350ms;
+        animation-name: fade;
+        animation-direction: alternate;
+        animation-iteration-count: infinite;
+      }
+    }
+  }
+
+  @keyframes fade {
+    from {
+      opacity: 1;
+    }
+
+    to {
+      opacity: 0;
     }
   }
 }
@@ -78,11 +107,14 @@
   .home_btn_ctr {
     display: flex;
     align-items: center;
-    flex-direction: column;
     gap: 1rem;
+    padding-top: 2rem;
   }
 
-  .welcome_text {
-    font-size: 1.5rem;
+  .wrapper_home {
+    > div {
+      font-size: 2em;
+      min-height: 3rem;
+    }
   }
 }
